# track2d-demo

./: .gitmodules  CMakeLists.txt  README.md
assets/demo_curving_trajectory/: plot.txt
assets/demo_read_from_file/: perimeter.txt  plot.txt
assets/demo_straight_trajectory/: perimeter.txt  plot.txt
scripts/: demo_read_from_file.sh
src/: file_plot_source.cpp  main.cpp  polygon_perimeter.cpp  ppm_image.cpp  track2d_demo_utils.cpp  track_display.cpp  track_display_stub.cpp
src/include/: file_plot_source.hpp  polygon_perimeter.hpp  ppm_image.hpp  track2d_demo_utils.hpp  track_display.hpp
test/: main.cpp
